loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: '<-' expected but ')' found.
for (j<=1 to 10) {
               ^LoopCourse:20: error: illegal start of simple expression
	}
        ^